# better-search-rag-rust

./: .gitignore  Cargo.toml  README.md  build.rs  environment.yaml  makefile  run-slurm.sh
.cargo/: config.toml
scripts/: app_run.sh  build.sh  launch.sh  ollama_run.sh  setup_mpi.sh
src/: llm.rs  main.rs  metrics.rs  mpi_helper.bak.rs  mpi_helper.rs  source.rs  utils.rs
src/llm/: hf.rs  mod.rs
src/mpi_helpers/: benchmark.rs  load_balance.rs  metrics.rs  mod.rs  source.rs  tasks.rs  vectorstore.rs
src/vectorstore/: arrow.rs  hdf5.rs  mmap.rs  mod.rs  polars.rs
