[package]
name = "better-search-rag-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.0.0"
arrow-array = "55.0.0"
arrow-schema = "55.0.0"
mpi = { version = "0.8.0", features = [] }
ndarray = "0.16.1"
ort = {version = "=2.0.0-rc.9", features = ["download-binaries"] }
parquet = {version = "55.0.0", features = ["arrow"] }
polars = { version = "=0.47.0", features = ["ndarray", "parquet", "lazy", "dtype-array", "streaming"] }
tokenizers = "0.21.1"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "io-util"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
walkdir = "2.5.0"

[dev-dependencies]
mockall = { version = "0.13.1", features = [] }
rand = "0.9.1"
tempfile = "3.8.1"
